--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@strapi/strapi": "4.3.8",
     "pg": "8.6.0",
     "pg-connection-string": "^2.5.0",
-    "strapi-plugin-ckeditor5": "^2.1.1-rc.1"
+    "strapi-plugin-ckeditor5": "^2.1.1-rc.1",
+    "strapi-provider-upload-aws-s3": "^3.6.10"
   },
   "author": {
     "name": "A Strapi developer"
