--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-graphql": "^4.3.8",
     "@strapi/plugin-i18n": "4.3.8",
     "@strapi/plugin-users-permissions": "4.3.8",
+    "@strapi/provider-upload-aws-s3": "^4.4.0",
     "@strapi/strapi": "4.3.8",
     "pg": "8.6.0",
     "pg-connection-string": "^2.5.0",
